Some refactors 11